--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "10.4.7",
     "postcss": "8.4.20",
     "tailwindcss": "3.2.4",
+    "next-pwa": "5.5.5",
     "nextjs-progressbar": "0.0.14"
   }
 }
