--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "8.4.20",
     "tailwindcss": "3.2.4",
     "next-pwa": "5.5.5",
-    "nextjs-progressbar": "0.0.14"
+    "nextjs-progressbar": "0.0.14",
+    "rss-parser": "3.12.0"
   }
 }
