--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwindcss": "3.2.4",
     "next-pwa": "5.5.5",
     "nextjs-progressbar": "0.0.14",
-    "rss-parser": "3.12.0"
+    "rss-parser": "3.12.0",
+    "moment": "2.29.4"
   }
 }
