--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "postcss": "8.4.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-h5-audio-player": "^3.8.6",
+    "react-h5-audio-player": "3.8.6",
+    "interweave": "13.0.0",
     "rss-parser": "3.12.0",
     "tailwindcss": "3.2.4",
     "typescript": "4.9.4"
