--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_HOST = http://localhost:3000
+NEXT_PUBLIC_HOST = https://test-podcast-player.vercel.app
 NEXT_PUBLIC_APP_NAME = Podcast Player
 NEXT_PUBLIC_AUTHOR = Juan Fariña
 
